--- a/index.html
+++ b/index.html
@@ -2370,8 +2370,7 @@
                                 data-typography="BodyAlpha"
                                 class="x-el x-el-p c1-1 c1-2 c1-2k c1-2l c1-3o c1-1p c1-49 c1-b c1-7v c1-c c1-2u c1-d c1-e c1-f c1-g"
                               >
-                                6 Wildberry Crescent, Brampton, Ontario L6R 1M7,
-                                Canada
+                                12698 - Centreville Creek Road, Bolton, Ontario, L7C3A6 - Canada
                               </p>
                               <p
                                 data-ux="ContentText"
@@ -2616,8 +2615,7 @@
                           data-typography="BodyAlpha"
                           class="x-el x-el-p c1-1 c1-2 c1-2k c1-2l c1-3o c1-1p c1-9c c1-b c1-ac c1-c c1-2u c1-d c1-e c1-f c1-g"
                         >
-                          6 Wildberry Crescent, Brampton, Ontario L6R 1M7,
-                          Canada
+                          12698 - Centreville Creek Road, Bolton, Ontario, L7C3A6 - Canada
                         </p>
                         <p
                           data-ux="FooterText"
