--- a/index.html
+++ b/index.html
@@ -2507,69 +2507,8 @@
                     </div>
                   </div>
                 </section>
-                <div
-                  data-ux="MapBanner"
-                  class="x-el x-el-div c1-1 c1-2 c1-9o c1-9u c1-o c1-b c1-c c1-9v c1-9w c1-d c1-e c1-f c1-g"
-                >
-                  <div
-                    data-ux="Element"
-                    id="bs-4"
-                    class="x-el x-el-div c1-1 c1-2 c1-b c1-c c1-d c1-e c1-f c1-g"
-                  >
-                    <div
-                      id="MapBox-277937"
-                      style="
-                        left: 0;
-                        top: 0;
-                        right: 0;
-                        bottom: 0;
-                        position: absolute;
-                        cursor: pointer;
-                        display: block;
-                        transform: translate3d(0, 0, 0);
-                      "
-                      data-aid="CONTACT_MAP_REND"
-                    ></div>
-                    <button
-                      data-ux-btn="primary"
-                      data-ux="ButtonPrimary"
-                      data-tccl="ux2.contact.get_directions.click,click"
-                      icon="direction"
-                      data-typography="ButtonAlpha"
-                      class="x-el x-el-button c1-4i c1-4j c1-36 c1-9x c1-9y c1-2n c1-4k c1-4l c1-4m c1-r c1-29 c1-4n c1-4o c1-2l c1-2k c1-1y c1-8r c1-8s c1-81 c1-83 c1-9z c1-4u c1-2t c1-4v c1-b c1-42 c1-z c1-9j c1-4x c1-a0 c1-a1 c1-a2 c1-4y c1-9k c1-9l c1-9m c1-9n"
-                    >
-                      <span
-                        data-ux="Element"
-                        class="x-el x-el-span c1-3y c1-3z c1-9j c1-b c1-o c1-7x c1-1v c1-9k c1-9l c1-9m c1-9n"
-                        ><span
-                          data-ux="Element"
-                          class="x-el x-el-span c1-1 c1-2 c1-a3 c1-a4 c1-36 c1-a5 c1-38 c1-a6 c1-a7 c1-a8 c1-a9 c1-b c1-9j c1-9k c1-9l c1-9m c1-9n"
-                          ><svg
-                            viewBox="0 0 24 24"
-                            fill="currentColor"
-                            width="18px"
-                            height="18px"
-                            data-ux="Icon"
-                            class="x-el x-el-svg c1-1 c1-2 c1-41 c1-2r c1-6l c1-b c1-9j c1-9k c1-9l c1-9m c1-9n"
-                          >
-                            <svg
-                              width="24"
-                              height="24"
-                              xmlns="http://www.w3.org/2000/svg"
-                            >
-                              <path
-                                d="M19.94 6.078l-7.273 14.546c-.129.265-.345.398-.648.398a.962.962 0 01-.17-.023.716.716 0 01-.557-.705V13.75H4.746a.716.716 0 01-.704-.557.736.736 0 01.045-.477.687.687 0 01.33-.341L18.962 5.1a.683.683 0 01.33-.08c.204 0 .375.073.511.217a.678.678 0 01.21.392.69.69 0 01-.073.448z"
-                                fill="currentColor"
-                              ></path>
-                            </svg></svg></span
-                        ><span
-                          data-ux="Element"
-                          class="x-el x-el-span iconText c1-3y c1-3z c1-9j c1-b c1-2m c1-4n c1-aa c1-1v c1-9k c1-9l c1-9m c1-9n"
-                          >Get directions</span
-                        ></span
-                      >
-                    </button>
-                  </div>
+                <div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d652.1557952196279!2d-79.75995089775557!3d43.82187146719741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b17915ea80b17%3A0x6509de802514542c!2sBIG%20RIG%20CARRIERS!5e1!3m2!1sen!2sca!4v1746402575571!5m2!1sen!2sca" width="100%" height="480px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
               </div>
             </div>
@@ -2652,7 +2591,7 @@
                           >
                             <p style="margin: 0">
                               <span
-                                >Copyright © 2024 BigRigCarriers - All Rights
+                                >Copyright © 2025 BigRigCarriers - All Rights
                                 Reserved.</span
                               >
                             </p>
